--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-glimmer",
     "displayName": "vscode-glimmer",
     "description": "VSCode extension for glimmer",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "license": "MIT",
     "publisher": "chiragpat",
     "repository": {
@@ -31,5 +31,6 @@
                 }
             }
         ]
-    }
+    },
+    "icon": "icon.png"
 }
