Adds support for <template> syntax
Adds support for `<template>` syntax in JS and TS files, and also adds a
new file extension, `.gjs` and `.gts`, which alias JS and TS. This
method ensures that `.gjs` and `.gts` filse are treated the same as
JavaScript and TypeScript, including things like autocomplete, while
allowing us to experiment with a new file format.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,20 @@
         "Programming Languages"
     ],
     "contributes": {
+        "languages": [
+            {
+                "id": "javascript",
+                "extensions": [
+                    ".gjs"
+                ]
+            },
+            {
+                "id": "typescript",
+                "extensions": [
+                    ".gts"
+                ]
+            }
+        ],
         "grammars": [
             {
                 "injectTo": [
@@ -26,6 +40,17 @@
                 ],
                 "scopeName": "inline.hbs",
                 "path": "./syntaxes/inline-hbs.json",
+                "embeddedLanguages": {
+                    "meta.embedded.block.html": "text.html.handlebars"
+                }
+            },
+            {
+                "injectTo": [
+                    "source.js",
+                    "source.ts"
+                ],
+                "scopeName": "inline.template",
+                "path": "./syntaxes/inline-template.json",
                 "embeddedLanguages": {
                     "meta.embedded.block.html": "text.html.handlebars"
                 }
