--- a/package.json
+++ b/package.json
@@ -47,7 +47,15 @@
                 "scopeName": "source.gjs",
                 "embeddedLanguages": {
                     "source.gjs": "javascript"
-                }
+                },
+                "unbalancedBracketScopes": [
+                    "keyword.operator.relational",
+                    "storage.type.function.arrow",
+                    "keyword.operator.bitwise.shift",
+                    "meta.brace.angle",
+                    "punctuation.definition.tag",
+                    "keyword.operator.assignment.compound.bitwise.ts"
+                ]
             },
             {
                 "language": "glimmer-ts",
@@ -55,7 +63,15 @@
                 "scopeName": "source.gts",
                 "embeddedLanguages": {
                     "source.gts": "typescript"
-                }
+                },
+                "unbalancedBracketScopes": [
+                    "keyword.operator.relational",
+                    "storage.type.function.arrow",
+                    "keyword.operator.bitwise.shift",
+                    "meta.brace.angle",
+                    "punctuation.definition.tag",
+                    "keyword.operator.assignment.compound.bitwise.ts"
+                ]
             },
             {
                 "injectTo": [
